[project]
name = "slough-cli-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Daryl Stark", email = "daryl@dstark.nl" }]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.10.4", "typer>=0.15.1"]

[project.scripts]
slough = "slough_cli_tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
exclude = ["docs/*.py"]
select = [
    "E",   # pycodestyle (errors)
    "W",   # pycodestyle (warnings)
    "PL",  # pylint
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "LOG", # flake8-logging
    "Q",   # flake8-quotes
    "ANN", # flak8-annotations
    "ICN", # flake8-import-conventions
    "SLF", # flake8-self
    "TD",  # flake8-todo
    "FIX", # flake8-fixme
    "D",   # pydocstyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "N",   # pep8-naming
]
ignore = [
    "B008",    # function call in default argument
    "PLR2004", # magic value used in comparison
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "TD003",   # missing link
    "TD002",   # missing author
    "PLR0913", # too many arguments
    "FIX002",  # fixme found - skipped for now
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = 'single'
multiline-quotes = 'double'

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
docstring-code-format = true
exclude = ["docs/*.py"]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
]

[tool.pytest.ini_options]
addopts = [
    '--cov=chain_of_responsibility',
    '--cov=slough_cli_tool',
    '--cov=slough_config',
    '--cov=slough',
    '--cov-report=html',
    '--cov-report=lcov',
]
testpaths = ['tests']

[tool.mypy]
python_version = '3.13'
